--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,67 @@
-body {
-  font-family: Arial, sans-serif;
-  
+/* Existing styles */
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
 }
 
-#app {
-  width: 80%;
-  margin: auto;
-}
-
-
-
-h1{
+h1 {
   text-align: center;
-  background-color: rgb(3, 3, 20);
-  color: aliceblue;
+  color: rgb(0, 8, 15);
   border-radius: 50px 0;
+  padding: 10px;
+}
+
+.modal-content {
+  background-color: rgb(6, 25, 71);
+  margin: 15% auto;
   padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 500px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  color: #fdf9f9;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+input {
+  margin: 20px;
+  padding: 14px;
+  width: calc(100% - 60px);
+  border-radius: 10px ;
+  background-color: rgb(6, 25, 71);
+  color: #fdf9f9;
+} 
+
+span {
+  color: rgba(3, 17, 49, 0.849);
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 20px;
-  
 }
 
 th, td {
@@ -32,14 +71,40 @@ th, td {
 }
 
 th {
-  background-color: #f2f2f2;
+  background-color: rgb(6, 25, 71);
+  color: #fff;
+  border-radius: 0px 0 0 30;
 }
 
-input {
-  margin: 15px;
-  padding: 14px;
-  width: 450px;
-  border-radius: 30px 0;
+ tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+tr:hover {
+  background-color: rgb(6, 25, 71);
+  color: #fff;
+}
 
 
+@media screen and (max-width: 600px) {
+  .modal-content {
+    width: 50%;
+  }
+  
+  input {
+    width: calc(100% - 50px);
+  }
+  
+  table, th, td  {
+    font-size: 14px;
+  }
+
+  h1{
+    font-size: 19px;
+  }
+}
+
+#app {
+  width: 80%;
+  margin: auto;
 }
